--- a/locales/en.json
+++ b/locales/en.json
@@ -4,6 +4,9 @@
 		"delete": "Delete",
 		"save": "Save"
 	},
+	"routines": {
+		"subroutine": "Subroutine"
+	},
 	"settings": {
 		"title": "Settings",
 		"language": "Language",
@@ -70,5 +73,16 @@
 		"password": "Password",
 		"confirmPassword": "Confirm password",
 		"register": "Register"
-	}
+	},
+	"login": {
+    "title": "Log in",
+    "failed": "Login failed. Please try again",
+    "email": "Email",
+    "password": "Password",
+    "login": "Log in",
+    "forgotPassword": "Forgot your password?",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign up",
+    "or": "or"
+}
 }
